--- a/src/content/blog/graphql-lesson-learned.mdx
+++ b/src/content/blog/graphql-lesson-learned.mdx
@@ -5,10 +5,11 @@ title: 'GraphQL Lessons Learned: Unveiling its Unique Strengths and Exploring Be
 description: 'The changes that GraphQL brought to web development were significant, bridging the gap between front-end and back-end teams. But at the same time causing serious difficulties and costs for developers. After years of hype, GraphQL finally settles on its strength, while alternative solutions are built upon its lessons.'
 image:
   alt: 'Meme about GraphQL vs REST API & tRPC'
-  url_landscape: '/images/blogs/graphql-lesson-learned_landscape.jpg' 
-	url_square: '/images/blogs/graphql-lesson-learned_square.jpg'
+  url_landscape: '/images/blogs/graphql-lesson-learned_landscape.jpg'
+  url_square: '/images/blogs/graphql-lesson-learned_square.jpg'
 tags: ['GraphQL', 'REST', 'tRPC', 'API', 'Back-end']
 pubDate: 2023-06-022
+isFeatured: true
 ---
 
 [GraphQL](https://graphql.org/) has undoubtedly made a lasting impact on web development. It is still one of the prominent technology that many companies have in their consideration before the start of a project. Its ability to solve communication challenges between teams is remarkable. However, it is essential to acknowledge that GraphQL is not without its flaws and costs. We gonna dives into what make GraphQL unique and the problem it's solve and explores alternative solutions that have emerged, leveraging the lessons learned from GraphQL's journey. So that at the end, we can have make better decision, which technology to chose based on our use case.
