--- a/src/content/blog/graphql-lesson-learned.mdx
+++ b/src/content/blog/graphql-lesson-learned.mdx
@@ -1,13 +1,13 @@
 ---
-layout: '../../layouts/BlogLayout.astro'
-siteTitle: 'GraphQL Lessons Learned'
-title: 'GraphQL Lessons Learned: Unveiling its Unique Strengths and Exploring Better Alternatives'
-description: 'The changes that GraphQL brought to web development were significant, bridging the gap between front-end and back-end teams. But at the same time causing serious difficulties and costs for developers. After years of hype, GraphQL finally settles on its strength, while alternative solutions are built upon its lessons.'
+layout: "../../layouts/BlogLayout.astro"
+siteTitle: "GraphQL Lessons Learned"
+title: "GraphQL Lessons Learned: Unveiling its Unique Strengths and Exploring Better Alternatives"
+description: "The changes that GraphQL brought to web development were significant, bridging the gap between front-end and back-end teams. But at the same time causing serious difficulties and costs for developers. After years of hype, GraphQL finally settles on its strength, while alternative solutions are built upon its lessons."
 image:
-  alt: 'Meme about GraphQL vs REST API & tRPC'
-  url_landscape: '/images/blogs/graphql-lesson-learned_landscape.jpg'
-  url_square: '/images/blogs/graphql-lesson-learned_square.jpg'
-tags: ['GraphQL', 'REST', 'tRPC', 'API', 'Back-end']
+  alt: "Meme about GraphQL vs REST API & tRPC"
+  url_landscape: "/images/blogs/graphql-lesson-learned_landscape.jpg"
+  url_square: "/images/blogs/graphql-lesson-learned_square.jpg"
+tags: ["GraphQL", "REST", "tRPC", "API", "Back-end"]
 pubDate: 2023-06-022
 isFeatured: true
 ---
@@ -77,22 +77,22 @@ Check out the GraphQL documentary below, how it starts, and how it become so pop
 
 ```html
 <iframe
-	width="560"
-	height="315"
-	src="https://www.youtube.com/embed/qgdiLcD2RL8"
-	title="YouTube video player"
-	frameborder="0"
-	allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-	allowfullscreen
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/qgdiLcD2RL8"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen
 ></iframe>
 
 <iframe
-	width="560"
-	height="315"
-	src="https://www.youtube.com/embed/783ccP__No8"
-	title="YouTube video player"
-	frameborder="0"
-	allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-	allowfullscreen
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/783ccP__No8"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen
 ></iframe>
 ```
