--- a/src/content/blog/graphql-lesson-learned.mdx
+++ b/src/content/blog/graphql-lesson-learned.mdx
@@ -50,7 +50,7 @@ And if we look at the future direction of web development, the server component 
 
 Then when and why should use GraphQL? Are we done with GraphQL now? If you look at the chart. It's still have a big use case. For more explanation of the chart, go here.
 
-## Irreplaceable GraphQL strenght
+## Irreplaceable GraphQL strength
 
 One thing that is irreplaceable from GraphQL is how it's bridging the gap between backend and frontend teams, providing them with a powerful method of communication and collaboration. The schema in GraphQL serves as a shared contract, enabling teams to define and agree upon the structure and types of data exchanged between them. This strict contract ensures that both sides can work independently, confident that as long as they adhere to the agreed schema, everything will seamlessly fit together. As a front-end, By having clear type definitions, fetching the right data, and managing various states, GraphQL tools provide an exceptional developer experience. This has led many front-end developers to view GraphQL as a panacea, allowing them to focus solely on the front end without having to delve into backend intricacies. While GraphQL may not replace SQL or be suited for direct database operations, its true strength lies in enabling effective collaboration and empowering teams to build powerful APIs based on a shared schema.
 
