dark mode twit & mt

--- a/src/content/blog/graphql-lesson-learned.mdx
+++ b/src/content/blog/graphql-lesson-learned.mdx
@@ -60,8 +60,8 @@ In the quest to make GraphQL more accessible, one library stands out: [Relay](ht
 
 The react team, the team behind Relay, recognizes these challenges. But surprisingly, instead of making Relay easier, they taking the best parts of relay and put in on RSC. One more twist as Dan tweets:
 
-<div class="flex justify-center">
-  <blockquote class="twitter-tweet">
+<div class="mt-2 flex justify-center">
+  <blockquote class="twitter-tweet" data-theme="dark">
     <p lang="en" dir="ltr">
       by the way, credit where it’s due — data-driven code splitting in RSC is
       largely inspired by Relay (which has “data-driven dependencies”). RSC
