--- a/src/content/blog/graphql-lesson-learned.mdx
+++ b/src/content/blog/graphql-lesson-learned.mdx
@@ -86,13 +86,12 @@ Finally, we want to express my gratitude to GraphQL for the valuable lessons it 
 Today, there are a few remaining challenges that GraphQL uniquely solves. However, if
 your organization faces the team split schema problem, GraphQL remains an excellent architectural solution to consider. It is crucial to approach the adoption of GraphQL from an organizational perspective rather than a purely technical one. The intention of this is to assist companies in avoiding unnecessary detours into the GraphQL rabbit hole for reasons that may not align with their specific needs. And also encourage us to try a better alternative when it's fit with our projects.
 
-This article is based on Theo's rant that you can watch here. We are big fans of him.
-
-Check out the GraphQL documentary below, how it starts, and how it become so popular as we all know it today.
+<br />
 
 ---
 
-```html
+This article is based on Theo's rant that you can watch below.
+
 <iframe
   width="560"
   height="315"
@@ -101,7 +100,11 @@ Check out the GraphQL documentary below, how it starts, and how it become so pop
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   allowfullscreen
+  class="mx-auto pt-2"
 ></iframe>
+
+Also, check out the GraphQL documentary below, how it starts, and how it
+become so popular as we all know it today.
 
 <iframe
   width="560"
@@ -111,5 +114,5 @@ Check out the GraphQL documentary below, how it starts, and how it become so pop
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   allowfullscreen
+  class="mx-auto pt-2"
 ></iframe>
-```
