--- a/src/content/blog/graphql-lesson-learned.mdx
+++ b/src/content/blog/graphql-lesson-learned.mdx
@@ -102,9 +102,9 @@ This article is based on Theo's rant that you can watch below.
   allowfullscreen
   class="mx-auto pt-2"
 ></iframe>
-
-Also, check out the GraphQL documentary below, how it starts, and how it
-become so popular as we all know it today.
+<br />
+Also, check out the GraphQL documentary below, how it starts, and how it become so
+popular as we all know it today.
 
 <iframe
   width="560"
