multiple images size for different purpose

--- a/src/content/blog/graphql-lesson-learned.mdx
+++ b/src/content/blog/graphql-lesson-learned.mdx
@@ -5,8 +5,10 @@ title: "GraphQL Lessons Learned: Unveiling its Unique Strengths and Exploring Be
 description: "The changes that GraphQL brought to web development were significant, bridging the gap between front-end and back-end teams. But at the same time causing serious difficulties and costs for developers. After years of hype, GraphQL finally settles on its strength, while alternative solutions are built upon its lessons."
 image:
   alt: "Meme about GraphQL vs REST API & tRPC"
-  url_landscape: "/images/blogs/graphql-lesson-learned_landscape.jpg"
-  url_square: "/images/blogs/graphql-lesson-learned_square.jpg"
+  url:
+    og: "/images/blogs/graphql-lesson-learned/og.jpg"
+    banner: "/images/blogs/graphql-lesson-learned/banner.png"
+    square: "/images/blogs/graphql-lesson-learned/square.jpg"
 tags: ["GraphQL", "REST", "tRPC", "API", "Back-end"]
 pubDate: 2023-06-022
 isFeatured: true
@@ -85,8 +87,6 @@ Finally, we want to express my gratitude to GraphQL for the valuable lessons it 
 
 Today, there are a few remaining challenges that GraphQL uniquely solves. However, if
 your organization faces the team split schema problem, GraphQL remains an excellent architectural solution to consider. It is crucial to approach the adoption of GraphQL from an organizational perspective rather than a purely technical one. The intention of this is to assist companies in avoiding unnecessary detours into the GraphQL rabbit hole for reasons that may not align with their specific needs. And also encourage us to try a better alternative when it's fit with our projects.
-
-<br />
 
 ---
 
