--- a/src/content/blog/graphql-lesson-learned.mdx
+++ b/src/content/blog/graphql-lesson-learned.mdx
@@ -93,26 +93,22 @@ your organization faces the team split schema problem, GraphQL remains an excell
 This article is based on Theo's rant that you can watch below.
 
 <iframe
-  width="560"
-  height="315"
   src="https://www.youtube.com/embed/qgdiLcD2RL8"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   allowfullscreen
-  class="mx-auto pt-2"
+  class="mx-auto aspect-video w-full md:max-w-xl lg:max-w-2xl"
 ></iframe>
 <br />
 Also, check out the GraphQL documentary below, how it starts, and how it become so
 popular as we all know it today.
 
 <iframe
-  width="560"
-  height="315"
   src="https://www.youtube.com/embed/783ccP__No8"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   allowfullscreen
-  class="mx-auto pt-2"
+  class="mx-auto aspect-video w-full md:max-w-xl lg:max-w-2xl"
 ></iframe>
