change section title

--- a/src/content/blog/graphql-lesson-learned.mdx
+++ b/src/content/blog/graphql-lesson-learned.mdx
@@ -18,7 +18,7 @@ isFeatured: true
 
 _Have you really wonder by people so hype about graphQL back then?_
 
-## What you need is what you get
+## You get what you need
 
 Before the advent of GraphQL, developers faced a common issue with backend APIs: receiving excessive data in response to simple requests. Retrieving a user's information, for example, could entail receiving a bloated JSON payload containing hundreds of unnecessary details even though we only need the id and profile picture to render on a component. To retrieve specific subsets of data, developers had to coordinate with backend teams back and forth to create new APIs endpoint. Grow complexity within the team and slow down the development process. Before GraphQL, we had to do a lot of work to make the right APIs. We often just wouldn't do it.
 
@@ -30,7 +30,7 @@ Besides that, GraphQL offered the benefit of type safety when receiving data fro
 
 Yes, those are the thing that makes developers and even companies so excited. Those killing features are unique to GraphQL and it's helpful. But let's get rid of the hype for a moment and be a little bit skeptical. Is there any trade-off that a team has to pay for all those good things?
 
-## Cost too big to see
+## Hidden cost
 
 While GraphQL offers numerous benefits, it also introduces significant challenges and complexities. Maintaining the GraphQL schema, getting it right, and building the necessary tools and integrations require substantial effort. Many developers mistakenly believe that adding GraphQL to their tech stack will automatically improve it, particularly on the front end where much of the groundwork has already been laid by others. Building and maintaining a GraphQL setup like resolver, caching, and code-gen that scale, is extremely difficult. And the hard truth is GraphQL isn't a way to make APIs easier.
 
