fix: seo lazy load youtube

--- a/src/content/blog/graphql-lesson-learned.mdx
+++ b/src/content/blog/graphql-lesson-learned.mdx
@@ -94,6 +94,7 @@ This article is based on Theo's rant that you can watch below.
 
 <iframe
   src="https://www.youtube.com/embed/qgdiLcD2RL8"
+  loading="lazy"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -106,6 +107,7 @@ popular as we all know it today.
 
 <iframe
   src="https://www.youtube.com/embed/783ccP__No8"
+  loading="lazy"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
