--- a/src/content/blog/graphql-lesson-learned.mdx
+++ b/src/content/blog/graphql-lesson-learned.mdx
@@ -80,7 +80,12 @@ The react team, the team behind Relay, recognizes these challenges. But surprisi
     &mdash; дэн (@dan_abramov) <a href="https://twitter.com/dan_abramov/status/1629604899909500928?ref_src=twsrc%5Etfw">February 25, 2023</a>
   </blockquote>
 </div>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8" />
+<script
+  defer
+  fetchpriority="low"
+  src="https://platform.twitter.com/widgets.js"
+  charset="utf-8"
+/>
 
 As these stories of GraphQL unfold, it becomes increasingly clear that the exclusive reliance on GraphQL may no longer be necessary. The best features and benefits of GraphQL are gradually finding their way into other tools and frameworks we commonly use now. That is why, it may be wise to reevaluate the need for GraphQL when alternative solutions, such as tRPC and React Server Components, incorporate the essence of GraphQL's strengths while simplifying the integration.
 
