style: mx on >md

--- a/src/content/blog/graphql-lesson-learned.mdx
+++ b/src/content/blog/graphql-lesson-learned.mdx
@@ -39,7 +39,7 @@ Moreover, there is a growing trend of companies providing GraphQL APIs for third
 
 While GraphQL offers unique benefits, it is essential to consider the complexities and potential drawbacks associated with maintaining and scaling GraphQL schemas. There is some library like [Apollo](https://www.apollographql.com/) & framework like [Redwood](https://redwoodjs.com/) that tries be tackled GraphQL caveats and they are great. But maybe you should consider using graphQL in the first place, before trying those solutions.
 
-<div class="mx-12">
+<div class="md:mx-12">
   <Image
     src={imgComparison}
     alt="tRPC, graphQL, REST API comparison"
