fix: change tags to categories

--- a/src/content/blog/graphql-lesson-learned.mdx
+++ b/src/content/blog/graphql-lesson-learned.mdx
@@ -7,7 +7,7 @@ image:
   og: "./og.jpg"
   banner: "./banner.png"
   square: "./square.jpg"
-tags: ["GraphQL", "REST", "tRPC", "API", "Back-end"]
+categories: ["GraphQL", "REST", "tRPC", "API", "Back-end"]
 pubDate: 2023-06-022
 isFeatured: true
 ---
